# get-papers-list

./: .gitignore  README.md  pyproject.toml
src/get_papers/: __main__.py  pubmed.py
tests/: test_main.py
