[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "Command-line tool to fetch and filter PubMed papers."
authors = ["Shiwani Wasnik <shiwaniwasnik@gmail.com>"]
readme = "README.md"
packages = [{ include = "get_papers_list", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
requests = ">=2.32.4,<3.0.0"
pandas = ">=2.3.1,<3.0.0"
tqdm = ">=4.67.1,<5.0.0"
openai = "1.16.1"
pydantic = "<2.0" 

[tool.poetry.scripts]
get-papers-list = "get_papers_list.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
mypy = "^1.17.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
